// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_repr.adt.array;

message ProtoInvalidArrayError {
    message ProtoWrongCardinality {
        uint64 actual = 1;
        uint64 expected = 2;
    }
    oneof kind {
        uint64 too_many_dimensions = 1;
        ProtoWrongCardinality wrong_cardinality = 2;
    }
}
